[hotfix/CMA-price-alignment] fixed alignment on cma prices

--- a/resources/sass/search/cards.scss
+++ b/resources/sass/search/cards.scss
@@ -599,6 +599,7 @@ BANDA DE CARDS CMA Y MAERSK
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-right: 10px;
     }
 }
 @media only screen and (min-width: 768px) {
